--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>我的个人网站</title>
+    <p> peter is good </p>
     <meta name="description" content="个人展示网站，包含照片轮播、自我介绍和互动聊天功能">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
